[package]
name = "async-native-timer"
version = "0.1.0"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
edition = "2018"

[lib]
name = "async_native_timer"

[dependencies]
futures-preview = "0.3.0-alpha.15"
mio = "0.6.16"
romio = { git = "https://github.com/withoutboats/romio/" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.53"

[dev-dependencies]
futures-preview = "0.3.0-alpha.15"